Final commit before AI integration