@@ -16,24 +16,24 @@ public class RoomManager {
     }
 
     // ==============================
-    // JOIN ROOM (STRONGER CONSISTENCY)
+    // JOIN ROOM
     // ==============================
     public void joinRoom(String room, ClientHandler client) {
 
+        if (client == null) return; // 🔥 defensive
+
         String newRoom = normalize(room);
 
-        synchronized (client) { // 🔥 per-client lock (clean & effective)
+        synchronized (client) {
 
             String oldRoom = clientRooms.get(client);
 
             if (newRoom.equals(oldRoom)) return;
 
-            // Remove from old
             if (oldRoom != null) {
                 removeFromRoom(oldRoom, client);
             }
 
-            // Add to new
             rooms.computeIfAbsent(newRoom, r -> ConcurrentHashMap.newKeySet())
                  .add(client);
 
@@ -42,9 +42,11 @@ public class RoomManager {
     }
 
     // ==============================
-    // LEAVE CURRENT ROOM
+    // LEAVE ROOM
     // ==============================
     public void leaveCurrentRoom(ClientHandler client) {
+
+        if (client == null) return;
 
         synchronized (client) {
 
@@ -57,7 +59,7 @@ public class RoomManager {
     }
 
     // ==============================
-    // INTERNAL REMOVE
+    // INTERNAL REMOVE (FIXED RACE)
     // ==============================
     private void removeFromRoom(String room, ClientHandler client) {
 
@@ -66,15 +68,15 @@ public class RoomManager {
         if (members != null) {
             members.remove(client);
 
-            // safer cleanup
+            // 🔥 safer removal
             if (members.isEmpty() && !room.equals(DEFAULT_ROOM)) {
-                rooms.remove(room, members);
+                rooms.computeIfPresent(room, (r, set) -> set.isEmpty() ? null : set);
             }
         }
     }
 
     // ==============================
-    // GET ROOM MEMBERS
+    // SAFE SNAPSHOT
     // ==============================
     public Set<ClientHandler> getRoomMembers(String room) {
 
@@ -83,33 +85,25 @@ public class RoomManager {
 
         if (members == null) return Collections.emptySet();
 
-        // 🔥 return safe view
-        return Collections.unmodifiableSet(members);
+        // 🔥 return snapshot (important)
+        return Set.copyOf(members);
     }
 
-    // ==============================
-    // GET CLIENT ROOM
     // ==============================
     public String getClientRoom(ClientHandler client) {
         return clientRooms.get(client);
     }
 
     // ==============================
-    // LIST ROOMS
-    // ==============================
     public Set<String> getAllRooms() {
-        return Collections.unmodifiableSet(rooms.keySet());
+        return Set.copyOf(rooms.keySet()); // 🔥 snapshot
     }
 
-    // ==============================
-    // REMOVE CLIENT
     // ==============================
     public void removeClient(ClientHandler client) {
         leaveCurrentRoom(client);
     }
 
-    // ==============================
-    // NORMALIZE
     // ==============================
     private String normalize(String room) {
         if (room == null) return DEFAULT_ROOM;
